--- a/WES-Scikit-allel.ipynb
+++ b/WES-Scikit-allel.ipynb
@@ -106,15 +106,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from os.path import join \n",
+    "WORKDIR = '/home/sergio/Res_CIML/TLX3_project'\n",
+    "SCRIPTS = join(WORKDIR,'scripts')\n",
+    "DATADIR = join(WORKDIR,'data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "### VCF direct\n",
-    "fwes =  'tracks/WGS-WES/Exomes/WES_TLX3_TAP_Tum7-8.vcf.gz'\n",
-    "fwesh5 ='tracks/WGS-WES/Exomes/WES_TLX3_TAP_Tum7-8.h5'\n",
+    "fwes =  join(DATADIR,'tracks/WGS-WES/Exomes/WES_TLX3_TAP_Tum7-8.vcf.gz')\n",
+    "fwesh5 = join(DATADIR, 'tracks/WGS-WES/Exomes/WES_TLX3_TAP_Tum7-8.h5')\n",
     "\n",
     "# read VCF file, transform SNPEFF to separated fields (optional)\n",
     "cs = allel.read_vcf(fwes,fields='*', numbers={'ALT': 4},transformers=allel.ANNTransformer())\n"
@@ -122,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -134,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -183,19 +197,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['', 'protein_coding', 'pseudogene']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#print(sorted(var['ANN_Feature_Type'].unique()))\n",
     "#print(sorted(var['ANN_Transcript_BioType'].unique()))"
@@ -214,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -246,22 +252,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYUAAAEBCAYAAACXArmGAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4xLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvAOZPmwAAGTJJREFUeJzt3X9sVfX9x/HXtb0UY9MQtnu9pCWY\nqQsLKLhVsZu5nbq1hXKjvbINe7d2cZuDuKpkQTvo2rFNKUrs5pqy/eEII7hYUVrW1YuLTKaWBWyi\nDRsmTikK9JZbwV1aaHt7e75/MD5f2oL9Qe+v9vlImp7zuef2vj9U76uf8zmfc22WZVkCAEDSVfEu\nAACQOAgFAIBBKAAADEIBAGAQCgAAg1AAABiEAgDAIBQAAAahAAAwCAUAgEEoAACM1HgXMJre3l4d\nOnRIDodDKSkp8S4HAJJCJBJRMBjUwoULNXPmzDE/L+FD4dChQ/L5fPEuAwCS0o4dO5SdnT3m4xM+\nFBwOh6TzHXO5XHGuBgCSQyAQkM/nM++hY5XwoXDhlJHL5VJWVlacqwGA5DLe0+5MNAMADEIBAGAQ\nCgAAg1AAABiEAgDAIBQAAAahAAAwCIUk1huOXHIbACYq4Rev4fJm2lN0XflfJUnt1YVxrgbAVMBI\nAQBgEAoAAINQAAAYhAIAwCAUAAAGoQAAMAgFAIBBKAAADEIBAGAQCgAAg1AAABhjuvfR9773PZ06\ndUqpqecP/+Uvf6mPPvpIW7Zs0cDAgEpLS+Xz+SRJLS0t2rhxo/r6+rR06VKtWbNGknT48GGtX79e\nPT09ys7O1oYNG8zPAwAkhlFHCpZlqb29XY2NjebL5XKppqZGzz//vBoaGvTCCy/oP//5j3p7e7Vu\n3TrV1dWpublZhw4d0r59+yRJa9euVWVlpfbs2SPLslRfXx/1zgEAxmfUP9U//PBDSdIDDzygTz/9\nVN/+9rd1zTXX6Pbbb9esWbMkSfn5+fL7/brttts0b948zZ07V5Lk8Xjk9/t1ww03qLe3V4sXL5Yk\neb1ePfvssyouLh7yWqFQSKFQaEhbIBC48l4CAMZk1FAIhULKycnRz3/+c4XDYZWUlGjp0qVyOBzm\nGKfTqba2Np08eXJEe2dn54h2h8Ohzs7OEa+1bds21dbWXmmfAAATNGoo3HLLLbrlllvM/ooVK7Rx\n40atXr3atFmWJZvNpsHBQdlstjG3D1daWqqioqIhbYFAwMxXAACia9RQePvttxUOh5WTkyPp/Bt6\nZmamgsGgOSYYDMrpdMrlco2pvaurS06nc8RrZWRkKCMj44o6BACYuFEnms+cOaOnnnpKfX196u7u\n1q5du/T0009r//79OnXqlM6dO6dXX31VbrdbixYt0pEjR3T06FFFIhE1NTXJ7XYrMzNTaWlpam1t\nlSQ1NjbK7XZHvXMAgPEZdaRw55136t1339W9996rwcFBFRcX6ytf+YrWrFmjkpIShcNhrVixQjff\nfLMkqbq6WmVlZerr61Nubq4KCgokSZs3b1ZFRYW6u7u1YMEClZSURLdnAIBxs1mWZcW7iM9y7Ngx\n3X333XrttdeUlZUV73ISDp/RDOBSJvreyYpmAIBBKAAADEIBAGAQCgAAg1AAABiEAgDAIBQAAAah\nAAAwCAUAgEEoAAAMQgEAYBAKAACDUAAAGIQCAMAgFAAABqEAADAIBQCAQSgAAAxCAQBgEAoAAINQ\nAAAYhAIAwCAUAAAGoQAAMAgFAIBBKAAADEIBAGAQCgAAg1AAABhjDoVNmzapvLxcknT48GF5vV7l\n5+dr/fr1GhgYkCSdOHFCPp9PBQUFWr16tXp6eiRJoVBIDz74oJYuXSqfz6dgMBiFrgAArtSYQmH/\n/v3atWuX2V+7dq0qKyu1Z88eWZal+vp6SdKGDRtUXFwsv9+vhQsXqq6uTpL0m9/8RtnZ2XrllVf0\nrW99S0888UQUugIAuFKjhsKnn36qmpoarVq1SpJ0/Phx9fb2avHixZIkr9crv9+vcDisgwcPKj8/\nf0i7JL3++uvyeDySpOXLl+sf//iHwuHwiNcKhUI6duzYkK9AIDA5PQUAjCp1tAMqKyu1Zs0adXR0\nSJJOnjwph8NhHnc4HOrs7NTp06eVnp6u1NTUIe3Dn5Oamqr09HSdOnVK11577ZDX2rZtm2prayen\nZwCAcfvMUHjxxRc1Z84c5eTk6OWXX5YkDQ4OymazmWMsy5LNZjPfLzZ8/+LnXHXVyEFKaWmpioqK\nhrQFAgH5fL6x9QYAcEU+MxSam5sVDAZ1zz336L///a/Onj0rm802ZKK4q6tLTqdTs2fP1pkzZxSJ\nRJSSkqJgMCin0ylJcjqd6urqksvl0sDAgHp6ejRr1qwRr5eRkaGMjIxJ7iIAYKw+c05h69atampq\nUmNjox5++GHddddd2rhxo9LS0tTa2ipJamxslNvtlt1uV3Z2tpqbmyVJDQ0NcrvdkqTc3Fw1NDRI\nOh802dnZstvt0ewXAGACJrROYfPmzdq4caMKCgp09uxZlZSUSJKqqqpUX1+vZcuW6e2339ajjz4q\nSXrkkUf0zjvvqLCwUM8//7wqKysnrwcAgEkz6kTzBV6vV16vV5I0f/587dy5c8QxmZmZ2r59+4j2\nWbNm6fe///0VlAkAiAVWNAMADEIBAGAQCgAAg1BIIL3hyCW3ASBWCIUEMtOeouvK/6rryv86pJ2A\nABArY776CLF1ISAkqb26MM7VAJguGClgBE5jAdMXIwWMwCgFmL4YKQAADEJhGuM0EYDhOH00jXGa\nCMBwjBQAAAahAAAwCAUAgEEoxFmsJ3iZUAbwWQiFOLvcrS0u50rf1Mf7egCmF0IhyfCmDiCaCAUA\ngEEoAAAMQmGKuNzq5CudgxjLz2XyGpg6WNE8RQxfnTxZK5Uvt+qZ1dDA1MRIAQBgEApTHKd2AIwH\np4+muItP80hXdqqnNxzRTHvKZJQFIEExUoCksY0oWCMBTH2EAiTxhg/gPEIBk4pLVYHkRijgil38\n5n/xiIP5ByD5EApJINH/4ubUEzB1jCkUfvvb32rZsmUqLCzU1q1bJUktLS3yeDzKy8tTTU2NOfbw\n4cPyer3Kz8/X+vXrNTAwIEk6ceKEfD6fCgoKtHr1avX09EShO1NTsr7pcioJSD6jhsKBAwf0z3/+\nU7t379ZLL72k7du367333tO6detUV1en5uZmHTp0SPv27ZMkrV27VpWVldqzZ48sy1J9fb0kacOG\nDSouLpbf79fChQtVV1cX3Z4h7jiVBCSfUUPhtttu05/+9Celpqbqk08+USQSUSgU0rx58zR37lyl\npqbK4/HI7/fr+PHj6u3t1eLFiyVJXq9Xfr9f4XBYBw8eVH5+/pB2AEBiGdPiNbvdrmeffVZ//OMf\nVVBQoJMnT8rhcJjHnU6nOjs7R7Q7HA51dnbq9OnTSk9PV2pq6pD24UKhkEKh0JC2QCAwoY4lMhaB\nAUhUY17R/PDDD+tHP/qRVq1apfb2dtlsNvOYZVmy2WwaHBy8ZPuF7xcbvi9J27ZtU21t7UT6kVS4\nmRyARDVqKHzwwQfq7+/Xl770JV199dXKy8uT3+9XSsr//6UbDAbldDrlcrkUDAZNe1dXl5xOp2bP\nnq0zZ84oEokoJSXFHD9caWmpioqKhrQFAgH5fL4r6SMAYIxGnVM4duyYKioq1N/fr/7+fr322mta\nuXKljhw5oqNHjyoSiaipqUlut1uZmZlKS0tTa2urJKmxsVFut1t2u13Z2dlqbm6WJDU0NMjtdo94\nrYyMDGVlZQ35crlck9xlAMDljDpSyM3NVVtbm+69916lpKQoLy9PhYWFmj17tsrKytTX16fc3FwV\nFBRIkjZv3qyKigp1d3drwYIFKikpkSRVVVWpvLxcW7Zs0Zw5c/TMM89Et2cAgHEb05xCWVmZysrK\nhrTl5ORo9+7dI46dP3++du7cOaI9MzNT27dvn2CZAIBYYEUzAMAgFBATrG4GkgOhgJi43K06CAgg\nsfDJa4g51mkAiYuRAgDAIBQAAAahAAAwCAUAgEEoAAAMQgEAYBAKAACDUAAAGIQC4orbXwCJhRXN\niCtWNwOJhZECAMAgFAAABqEAADAIBSQMJp2B+GOiGQmDSWcg/hgpAAAMQgEAYBAKMcI5cgDJgFCI\nkct9RjEAJBJCAQBgEAoAAINQAAAYhAISEgvZgPhg8RoSEgvZgPhgpAAAMMYUCrW1tSosLFRhYaGe\neuopSVJLS4s8Ho/y8vJUU1Njjj18+LC8Xq/y8/O1fv16DQwMSJJOnDghn8+ngoICrV69Wj09PVHo\nDgDgSowaCi0tLXrzzTe1a9cuNTQ06F//+peampq0bt061dXVqbm5WYcOHdK+ffskSWvXrlVlZaX2\n7Nkjy7JUX18vSdqwYYOKi4vl9/u1cOFC1dXVRbdnAIBxGzUUHA6HysvLNWPGDNntdl1//fVqb2/X\nvHnzNHfuXKWmpsrj8cjv9+v48ePq7e3V4sWLJUler1d+v1/hcFgHDx5Ufn7+kHYAQGIZdaL5xhtv\nNNvt7e165ZVX9N3vflcOh8O0O51OdXZ26uTJk0PaHQ6HOjs7dfr0aaWnpys1NXVI+3ChUEihUGhI\nWyAQGH+vAAATMuarj95//339+Mc/1mOPPaaUlBS1t7ebxyzLks1m0+DgoGw224j2C98vNnxfkrZt\n26ba2toJdAMAMBnGFAqtra16+OGHtW7dOhUWFurAgQMKBoPm8WAwKKfTKZfLNaS9q6tLTqdTs2fP\n1pkzZxSJRJSSkmKOH660tFRFRUVD2gKBgHw+30T7hymgNxzRTHvKiG0Ak2/UOYWOjg499NBD2rx5\nswoLz18vvmjRIh05ckRHjx5VJBJRU1OT3G63MjMzlZaWptbWVklSY2Oj3G637Ha7srOz1dzcLElq\naGiQ2+0e8VoZGRnKysoa8uVyuSazv0hCF99MkEAAomvUkcJzzz2nvr4+VVdXm7aVK1equrpaZWVl\n6uvrU25urgoKCiRJmzdvVkVFhbq7u7VgwQKVlJRIkqqqqlReXq4tW7Zozpw5euaZZ6LUJQDARI0a\nChUVFaqoqLjkY7t37x7RNn/+fO3cuXNEe2ZmprZv3z6BEgEAscKKZgCAQSgAAAxCIYq4uyeAZEMo\nRBEfwQkg2RAKAACDUJggPgQmPvh3B6KLD9mZID4EJj74dweii5ECAMAgFAAABqGApMX8AjD5mFNA\n0mJ+AZh8jBQAAAahAAAwCAUAgEEoAAAMQgEAYBAKk4xLI+ODy1OBycElqZOMyyTjg393YHIwUgAA\nGIQCAMAgFAAABqEAADAIBQCAQShgyuHyVGDiuCQVUw6XpwITx0gBAGAQCgAAg1CYBJy3BjBVEAqT\n4MI57AvnsQEgWY05FLq7u7V8+XIdO3ZMktTS0iKPx6O8vDzV1NSY4w4fPiyv16v8/HytX79eAwMD\nkqQTJ07I5/OpoKBAq1evVk9PzyR3BRiJK5GA8RlTKLz77ru6//771d7eLknq7e3VunXrVFdXp+bm\nZh06dEj79u2TJK1du1aVlZXas2ePLMtSfX29JGnDhg0qLi6W3+/XwoULVVdXF50eARe5eBQ3054S\n73KAhDemUKivr1dVVZWcTqckqa2tTfPmzdPcuXOVmpoqj8cjv9+v48ePq7e3V4sXL5Ykeb1e+f1+\nhcNhHTx4UPn5+UPaAQCJZUzrFJ544okh+ydPnpTD4TD7TqdTnZ2dI9odDoc6Ozt1+vRppaenKzU1\ndUj7cKFQSKFQaEhbIBAYe28AAFdkQovXBgcHZbPZzL5lWbLZbJdtv/D9YsP3JWnbtm2qra2dSEkA\ngEkwoVBwuVwKBoNmPxgMyul0jmjv6uqS0+nU7NmzdebMGUUiEaWkpJjjhystLVVRUdGQtkAgIJ/P\nN5EyAQDjNKFLUhctWqQjR47o6NGjikQiampqktvtVmZmptLS0tTa2ipJamxslNvtlt1uV3Z2tpqb\nmyVJDQ0NcrvdI35uRkaGsrKyhny5XK4r6B4AYDwmNFJIS0tTdXW1ysrK1NfXp9zcXBUUFEiSNm/e\nrIqKCnV3d2vBggUqKSmRJFVVVam8vFxbtmzRnDlz9Mwzz0xeL2KkNxzhCpYkdvHvj98lcGnjCoW9\ne/ea7ZycHO3evXvEMfPnz9fOnTtHtGdmZmr79u0TKDFxcKO15MbvDxgdK5oBAAahgGlp+OpmVjsD\n503rz1PgHPP0dfGpJInTScAF0zoUOMcMAENx+ugSuIkagOlqWo8ULocRBIDpipECIEaHwAWEwv9c\n7o2AN4jpgVtsA+cRCv9zuU9P41PVAEwnhAIAwCAUAAAGoQAMw6QzprNpEQr8T47xYNIZ09m0CAUm\niwFgbKZFKFyMgACAy5t2oQAAuDxCAfgMzEdhuiEUgM9wudONBASmKm6IB4wRN0rEdMBIAQBgEArA\nBDDXgKmK00fABHAqCVMVIwXgCjFqwFTCSAG4QowaMJUwUgAmEaMGJDtGCsAkYtSAZMdIAYgSRg1I\nRoQCECWshkYyIhSAGCAgkCyYUwBijHkHJLKYjhT+8pe/aNmyZcrLy9OOHTti+dJAQrrcvAMjCMRL\nzEYKnZ2dqqmp0csvv6wZM2Zo5cqVWrJkiW644YZYlQAknOGjhgvb7/2qwBzTG46YjwUdyzZwJWIW\nCi0tLbr99ts1a9YsSVJ+fr78fr9+8pOfmGNCoZBCodCQ5x0/flySFAgErqyAnlOSpGPHjk3b7USp\nI9G2E6WOi7e7Ojt0x6a/S5LefPzOUbdf+2mu0lLPD/z7BgYnZXuiz0FiuPCeGYmMb9RpsyzLikZB\nw/3hD3/Q2bNntWbNGknSiy++qLa2Nv3qV78yx/zud79TbW1tLMoBgGlhx44dys7OHvPxMRspDA4O\nymazmX3LsobsS1JpaamKioqGtPX39+vjjz/Wddddp5SU/x8eBwIB+Xw+7dixQy6XK7rFJwD6O7XR\n36ktHv2NRCIKBoNauHDhuJ4Xs1BwuVx6++23zX4wGJTT6RxyTEZGhjIyMkY89wtf+MJn/tysrKzJ\nKzTB0d+pjf5ObbHu77x588b9nJidCPzqV7+q/fv369SpUzp37pxeffVVud3uWL08AGAMYjZSuPba\na7VmzRqVlJQoHA5rxYoVuvnmm2P18gCAMYjp4jWPxyOPxxPLlwQAjEPKL37xi1/Eu4iJSktL05Il\nS5SWlhbvUmKC/k5t9HdqS5b+xuySVABA4mPFCQDAIBQAAEbShkJtba0KCwtVWFiop556Kt7lxMSm\nTZtUXl4e7zJiYu/evfJ6vVq6dKl+/etfx7ucqGtsbDT/PW/atCne5URFd3e3li9ffv52Hjp/6xuP\nx6O8vDzV1NTEubrJN7y/L7zwgpYvXy6Px6Of/exn6u/vj3OFl2Elobfeesv6zne+Y/X19Vn9/f1W\nSUmJ9eqrr8a7rKhqaWmxlixZYj3++OPxLiXqPvroI+uOO+6wOjo6rP7+fuv++++3Xn/99XiXFTVn\nz561br31VuuTTz6xwuGwtWLFCuutt96Kd1mT6p133rGWL19uLViwwPr444+tc+fOWbm5udZHH31k\nhcNh64EHHphSv+Ph/f3www+tb37zm9aZM2eswcFB67HHHrO2bt0a7zIvKSlHCg6HQ+Xl5ZoxY4bs\ndruuv/56nThxIt5lRc2nn36qmpoarVq1Kt6lxMTf/vY3LVu2TC6XS3a7XTU1NVq0aFG8y4qaSCSi\nwcFBnTt3TgMDAxoYGEj4K1TGq76+XlVVVeYuBm1tbZo3b57mzp2r1NRUeTwe+f3+OFc5eYb3d8aM\nGaqqqlJ6erpsNpu++MUvJux7VlJ+yM6NN95ottvb2/XKK6/oz3/+cxwriq7KykqtWbNGHR0d8S4l\nJo4ePSq73a5Vq1apo6NDX//61/Xoo4/Gu6yoSU9P1yOPPKKlS5fq6quv1q233qovf/nL8S5rUj3x\nxBND9k+ePCmHw2H2nU6nOjs7Y11W1Azvb2ZmpjIzMyVJp06d0o4dO7Rx48Z4lDaqpBwpXPD+++/r\ngQce0GOPPabrrrsu3uVExYsvvqg5c+YoJycn3qXETCQS0f79+/Xkk0/qhRdeUFtbm3bt2hXvsqLm\nvffe00svvaS///3veuONN3TVVVfpueeei3dZUTWWG2RORZ2dnSotLdV9992nJUuWxLucS0raUGht\nbdX3v/99/fSnPx1xZ9WppLm5WW+99ZbuuecePfvss9q7d6+efPLJeJcVVZ///OeVk5Oj2bNna+bM\nmfrGN76htra2eJcVNW+++aZycnL0uc99TjNmzJDX69WBAwfiXVZUuVwuBYNBs3+pG2RONR988IFW\nrlypoqIiPfTQQ/Eu57KS8vRRR0eHHnroIdXU1Ez5v6C3bt1qtl9++WUdOHBA69ati2NF0XfnnXfq\n8ccfVygU0jXXXKM33nhDd999d7zLipr58+fr6aef1tmzZ3X11Vdr7969uummm+JdVlQtWrRIR44c\n0dGjR5WVlaWmpibdd9998S4rarq7u/WDH/xAjz76qO699954l/OZkjIUnnvuOfX19am6utq0rVy5\nUvfff38cq8JkWbRokX74wx+quLhY4XBYX/va16b0G8Ydd9yhf//73/J6vbLb7brpppv04IMPxrus\nqEpLS1N1dbXKysrU19en3NxcFRQUjP7EJLVz5051dXVp69at5g+9u+66S4888kicKxuJ21wAAIyk\nnVMAAEw+QgEAYBAKAACDUAAAGIQCAMAgFAAABqEAADAIBQCA8X/7brc81rBg0AAAAABJRU5ErkJg\ngg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f3adc24eef0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#cod_var.head(12)\n",
     "a,b,c = plt.hist(np.log(var['QUAL']), bins=100)"
@@ -343,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -360,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -445,29 +440,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['AD', 'DP', 'GQ', 'GT', 'MIN_DP', 'PGT', 'PID', 'PL', 'RGQ', 'SB']"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list(csh['calldata'].keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -479,29 +463,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['TAP-01', 'TLX3-01', 'Tumor7-01', 'Tumor8-01']"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list(csh['samples'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -527,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -548,29 +521,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TLX3 missing =  [5.43216556] %\n",
-      "TLX3 hetero =  [10.64159791] %\n",
-      "============================\n",
-      "TAP missing =  [9.74345101] %\n",
-      "TAP hetero =  [7.31051896] %\n",
-      "============================\n",
-      "Tumor7 missing =  [10.97163984] %\n",
-      "Tumor7 hetero =  [29.6126967] %\n",
-      "============================\n",
-      "Tumor8 missing =  [8.66856035] %\n",
-      "Tumor8 hetero =  [57.90883268] %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_variants = len(var_tb)\n",
     "pc_missing_tlx = gth_tlx.count_missing(axis=0)[:] * 100 / n_variants\n",
@@ -604,22 +559,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ALL segregating =  103335\n",
-      "TLX segregating =  11801\n",
-      "TAP segregating =  8107\n",
-      "num variants =  110895\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tlx_seg = gth_tlx.count_alleles().count_segregating()\n",
     "tap_seg = gth_tap.count_alleles().count_segregating()\n",
@@ -633,27 +577,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['T', 'G']"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#gth.count_alleles().is_segregating()[2000:2000+6]\n",
     "#gth[2000:2000+6]\n",
     "\n",
-    "list(var['REF'][2])"
+    "var['REF'][2]"
    ]
   },
   {
