--- a/Enh_Genes_Tlx_peaks.ipynb
+++ b/Enh_Genes_Tlx_peaks.ipynb
@@ -2,24 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sergio/miniconda3/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n",
-      "/home/sergio/miniconda3/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n",
-      "/home/sergio/miniconda3/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pybedtools as pb\n",
     "import numpy as np\n",
@@ -28,7 +15,23 @@
     "#import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "%load_ext autoreload \n",
+    "%autoreload 2  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from os.path import join \n",
+    "WORKDIR = '/home/sergio/Res_CIML/TLX3_project'\n",
+    "SCRIPTS = join(WORKDIR,'scripts')\n",
+    "DATADIR = join(WORKDIR,'data')"
    ]
   },
   {
@@ -40,35 +43,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "enh = pb.BedTool('tracks/Enhancers_ChromHMM.bed')\n",
+    "enh = pb.BedTool(join(DATADIR,'tracks/Enhancers_ChromHMM.bed'))\n",
     "enh_df = enh.to_dataframe()\n",
     "\n",
     "# Enh to genes table\n",
-    "enh2gn = pd.read_table('tracks/Enhancers_ChromHMM_enh2genes.txt', \n",
+    "enh2gn = pd.read_table(join(DATADIR,'tracks/Enhancers_ChromHMM_enh2genes.txt'), \n",
     "                        header=1, \n",
     "                        names=['enhancers','gene_name'])\n",
     "# Gene to enh table\n",
-    "gn2enh = pd.read_table('tracks/Enhancers_ChromHMM_genes2enh.txt', \n",
+    "gn2enh = pd.read_table(join(DATADIR,'tracks/Enhancers_ChromHMM_genes2enh.txt'), \n",
     "                        header=1, \n",
     "                        names=['gene_name','enhancers'])\n",
     "\n",
-    "def enh_gene(gen,df):\n",
-    "    reg = df[df['gene_name']==gen]\n",
-    "    if len(reg)>0:\n",
-    "        dr = reg.iloc[0]['enhancers'].split(' ')\n",
-    "        enhl = [x for x in dr if 'enh' in x]\n",
-    "    else:\n",
-    "        enhl=[]  \n",
-    "    return enhl\n",
-    "\n",
-    "\n",
-    "def enh_l_gene(genl,df):\n",
+    "def enh_gene(genl,df):\n",
+    "    if isinstance(genl, str):\n",
+    "        genl = [genl]\n",
     "    enhll = list()\n",
     "    for gen in genl:\n",
     "        reg = df[df['gene_name']==gen]\n",
@@ -80,19 +75,12 @@
     "        enhll = enhll+enhl\n",
     "    return list(set(enhll))\n",
     "\n",
-    "\n",
-    "def gene_enh(enh,df):\n",
-    "    reg = df[df['enhancers']==enh]\n",
-    "    if len(reg)>0:\n",
-    "        ls = reg.iloc[0]['gene_name'].split(', ')\n",
-    "        gl=[tr.split(' (')[0] for tr in ls]\n",
-    "    else:\n",
-    "        gl=[]  \n",
-    "    return gl\n",
-    "\n",
-    "def gene_l_enh(enll,df):\n",
+    "def gene_enh(enhl,df):\n",
+    "    if isinstance(enhl, str):\n",
+    "        enhl = [enhl]\n",
+    "    \n",
     "    genl = list()\n",
-    "    for enh in enll:\n",
+    "    for enh in enhl:\n",
     "        reg = df[df['enhancers']==enh]\n",
     "        if len(reg)>0:\n",
     "            ls = reg.iloc[0]['gene_name'].split(', ')\n",
@@ -100,103 +88,34 @@
     "        else:\n",
     "            gl=[]\n",
     "        genl = genl+gl\n",
-    "    return list(set(genl))"
+    "    return list(set(genl))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>chrom</th>\n",
-       "      <th>start</th>\n",
-       "      <th>end</th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>chr1</td>\n",
-       "      <td>6397000</td>\n",
-       "      <td>6397400</td>\n",
-       "      <td>enh_0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>chr1</td>\n",
-       "      <td>6442800</td>\n",
-       "      <td>6443400</td>\n",
-       "      <td>enh_1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>chr1</td>\n",
-       "      <td>6445000</td>\n",
-       "      <td>6446000</td>\n",
-       "      <td>enh_2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>chr1</td>\n",
-       "      <td>6456800</td>\n",
-       "      <td>6458000</td>\n",
-       "      <td>enh_3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>chr1</td>\n",
-       "      <td>7444800</td>\n",
-       "      <td>7445800</td>\n",
-       "      <td>enh_4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  chrom    start      end   name\n",
-       "0  chr1  6397000  6397400  enh_0\n",
-       "1  chr1  6442800  6443400  enh_1\n",
-       "2  chr1  6445000  6446000  enh_2\n",
-       "3  chr1  6456800  6458000  enh_3\n",
-       "4  chr1  7444800  7445800  enh_4"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['enh_6659', 'enh_18785', 'enh_6657', 'enh_18786', 'enh_18790', 'enh_18777', 'enh_6658', 'enh_18779', 'enh_18781', 'enh_18787', 'enh_18783', 'enh_6661', 'enh_6660', 'enh_18791', 'enh_18789', 'enh_18793', 'enh_18778', 'enh_18780', 'enh_18792', 'enh_18794', 'enh_18784', 'enh_18788', 'enh_6662', 'enh_18782']\n",
+      "['Il1r2', 'Map4k4']\n"
+     ]
     }
    ],
    "source": [
-    "#gens = ['Tm9sf2', 'Tle3']\n",
-    "#enhs = ['enh_168', 'enh_1683', 'enh_268']\n",
-    "#enh_l_gene(gens,gn2enh)\n",
-    "#enh_l_gene(gene_l_enh(enhs,enh2gn),gn2enh)\n",
-    "#enh_df.head()"
+    "gens = ['Tm9sf2', 'Tle3']\n",
+    "gnn = 'Tm9sf2'\n",
+    "enhs = ['enh_168', 'enh_1683', 'enh_268']\n",
+    "enhh = 'enh_168'\n",
+    "\n",
+    "print(enh_gene(gens,gn2enh))\n",
+    "print(gene_enh(enhh,enh2gn))\n",
+    "\n"
    ]
   },
   {
@@ -208,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -242,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -256,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -276,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -288,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -303,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -314,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -326,22 +245,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3347"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#enh_tlx_df_sort.head()\n",
     "len(enh_tlx_df_sort)"
@@ -722,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
