--- a/Genome_TLX3.ipynb
+++ b/Genome_TLX3.ipynb
@@ -396,28 +396,10 @@
    "source": [
     "# Load T-ALL ocnogenes\n",
     "tall = erl.read_gmt(join(DATADIR,'gene_lists/Cancermine/T-ALL.gmt')) \n",
-    "df_mut = pd.read_csv(join(DATADIR,'gene_lists/COSMIC/Genes_mutation_HUMAN_Acute-lymphoblastic-leukaemia.csv'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "df_mut['Gname'] = df_mut['Gene name'].apply(lambda x: x.split('_')[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "df_mut = pd.read_csv(join(DATADIR,'gene_lists/COSMIC/Genes_mutation_HUMAN_Acute-lymphoblastic-leukaemia.csv'))\n",
+    "\n",
+    "df_mut['Gname'] = df_mut['Gene name'].apply(lambda x: x.split('_')[0])\n",
+    "\n",
     "tall_onc = tall['T-ALL all']\n",
     "tall_mut = list(df_mut['Gname'].unique())"
    ]
